--- a/builder/Cargo.toml
+++ b/builder/Cargo.toml
@@ -16,4 +16,5 @@ path = "tests/progress.rs"
 trybuild = { version = "1.0.49", features = ["diff"] }
 
 [dependencies]
+quote = { version = "1.0.37"}
 syn = { version = "2.0.90", features = ["extra-traits"]}
