--- a/builder/Cargo.toml
+++ b/builder/Cargo.toml
@@ -16,5 +16,6 @@ path = "tests/progress.rs"
 trybuild = { version = "1.0.49", features = ["diff"] }
 
 [dependencies]
+proc-macro2 = { version = "1.0.92", features = ["proc-macro"]}
 quote = { version = "1.0.37"}
 syn = { version = "2.0.90", features = ["extra-traits"]}
