--- a/debug/Cargo.toml
+++ b/debug/Cargo.toml
@@ -18,4 +18,4 @@ trybuild = { version = "1.0.49", features = ["diff"] }
 [dependencies]
 proc-macro2 = { version = "1.0.92", features = ["proc-macro"]}
 quote = { version = "1.0.37"}
-syn = { version = "2.0.90", features = ["extra-traits"]}
+syn = { version = "2.0.90", features = ["extra-traits", "visit"]}
